
Sudo 1.6.7p3 released.

508) Fixed remaining Kerberos V issues with MIT Kerberos V and old Heimdal.

Sudo 1.6.7p4 released.

509) Fixed a typo that caused a compilation error on Heimdal.

510) Darwin (MacOS X) doesn't have a real setreuid() system call.

511) Fixed a problem with large numbers of environment variables.

Sudo 1.6.7p5 released.

512) Fixed a problem on FreeBSD when the user is only listed in NIS (not
     master.passwd) and netgroups are used in the master.passwd file.

Sudo 1.6.7p6 released.

513) BSD-style warn/err functions are now used throughout.

514) Fixed the --with-stow configure option

515) Added a "sudo_lecture" option that points to a file containing a custom
     lecture.

516) The username in a log entry is no longer truncated at 8 characters.

517) A new tag, NOEXEC, will prevent a dynamically-linked program being run
     by sudo from executing another program (think shell escapes).
     Because this uses LD_PRELOAD it has no effect on static binaries.
     Idea from Reznic Valery.

518) TIS fwtk authentication now supports fwtk 2.0 and higher.

519) Sudo will now try to stat the command to be run as the user
     specified by the -u flag if the stat fails as root.  Fixes
     an NFS issue.

520) Added Stan Lee / Uncle Ben quote to the lecture (from RedHat).

521) Added a -i option to simulate an initial login similar to "su -".
     Originally based on a patch from David J. MacKenzie.

522) Added a -e option to edit files the with uid of the invoking user.
     This prevents the user from editing other files or running commands
     as the target user.  If sudo is run as "sudoedit" the -e flag is implied.

523) If sudo is used to run as root shell, further sudo commands will
     be logged as run by the user specified by the SUDO_USER environment
     variable.  In -e mode (sudoedit), SUDO_USER is used to determine
     what user to run the editor when the real uid is 0.