@@ -19,6 +19,7 @@ AC_SUBST(PROGS)dnl
 AC_SUBST(CPPFLAGS)dnl
 AC_SUBST(LDFLAGS)dnl
 AC_SUBST(SUDO_LDFLAGS)dnl
+AC_SUBST(SUDO_OBJS)dnl
 AC_SUBST(LIBS)dnl
 AC_SUBST(SUDO_LIBS)dnl
 AC_SUBST(NET_LIBS)dnl
@@ -903,6 +904,17 @@ AC_ARG_WITH(goons-insults, [  --with-goons-insults    include the insults from t
 		;;
     no)		;;
     *)		AC_MSG_ERROR(["--with-goons-insults does not take an argument."])
+		;;
+esac])
+
+AC_ARG_WITH(ldap, [  --with-ldap             enable LDAP support],
+[case $with_ldap in
+    yes)	AC_DEFINE(HAVE_LDAP, 1, [Define if you use LDAP.])
+		AC_MSG_CHECKING(whether to use sudoers from LDAP)
+		AC_MSG_RESULT(yes)
+		;;
+    no)		;;
+    *)		AC_MSG_ERROR(["--with-ldap does not take an argument."])
 		;;
 esac])
 
@@ -2062,6 +2074,14 @@ dnl extra 'authenticate' lib (AIX only?)
 dnl
 if test "$with_authenticate" = "yes"; then
     SUDO_LIBS="${SUDO_LIBS} -ls"
+fi
+
+dnl
+dnl extra lib and .o file for LDAP support
+dnl
+if test "$with_ldap" = "yes"; then
+    SUDO_LIBS="${SUDO_LIBS} -lldap"
+    SUDO_OBJS="${SUDO_OBJS} ldap.o"
 fi
 
 dnl
